--- a/BlazorCRUD.Client/Tampletes/CardView.razor
+++ b/BlazorCRUD.Client/Tampletes/CardView.razor
@@ -40,7 +40,7 @@
         ModalDialogOptions modeloption = new()
         {
             //Style = "width:800px;",
-            ShowCloseButton = false
+            ShowCloseButton = false,
         };
         ModalDialog.ShowDialogAsync<DetailSharedResource>("Detail", modeloption);
     }
